feat observation field and revealCPF endpoint
